Removed Customer entity and updated role-based access for User and Admin